updates mid May 2019

--- a/Xambo.CV.tex
+++ b/Xambo.CV.tex
@@ -186,7 +186,7 @@ Dissertation: \emph{Interfaces for Sketching Musical Compositions}.\\
 \noindent
 
 \subsection*{Research Grants, Honors \& Awards}
-\years{2018--2021} \textsc{3-year Startup Grant (Startpakke)} (250,000 NOK), awarded to help early career women academics in male dominated fields. NTNU, Trondheim, Norway.\\
+\years{2018--2021} \textsc{3-year Startup Grant (Startpakke)} (250,000 NOK), awarded to women in permanent academic positions in a scientific field with underrepresentation of women. NTNU, Trondheim, Norway.\\
 \years{2017} NCWIT Engagement Excellence Award (\$5,000 cash award) to Greg Hendler, Léa Ikkache, Brandon Westergaard, Anna Xambó, Doug Edwards, Brian Magerko, and Jason Freeman (Earsketch), Georgia Tech.\\
 \years{2016}\textsc{Women in Music Information Retrieval (WiMIR) grant}, awarded conference fee waiver to attend the ISMIR 2016 conference. New York University (NYU), New York.\\
 \years{10/2010--07/2013}\textsc{3-year Fully-Funded Full-Time OU PhD scholarship}. The Open University, Milton Keynes, UK.\\
@@ -289,23 +289,26 @@ Candidate’s Share: 50\% (\$1,650)
 
 \subsection*{Peer-Reviewed Book Chapters}
 \noindent
+
+\years{2019}\textbf{Xambó, A.}, Font, F., Fazekas, G., Barthet, M. (in press). “Leveraging Online Audio Commons Content For Media Production". In Michael Filimowicz ed. Foundations in Sound Design for Linear Media: an interdisciplinary approach. Routledge.\\
 \years{2016}\textbf{Xambó, A.} (2017), “Embodied Music Interaction: Creative Design Synergies Between Music Performance and HCI". In Price, S. and Broadhurst, S. eds. Digital Bodies: Creativity and Technology in the Arts and Humanities. Palgrave Macmillan, London. pp. 207--220. ISBN 9781349952410.\\
-\years{2013}\textbf{Xambó, A.}, Laney, R., Dobbyn, C. and Jordà, S. (2013). “Video Analysis for Evaluating Music Interaction: Musical Tabletops". In Holland, S., Wilkie, K., Mulholland, P. and Seago, A. eds. Music and Human-Computer Interaction. Springer, London. pp. 241--258. ISBN 9781447129905.
+\years{2013}\textbf{Xambó, A.}, Laney, R., Dobbyn, C., Jordà, S. (2013). “Video Analysis for Evaluating Music Interaction: Musical Tabletops". In Holland, S., Wilkie, K., Mulholland, P. and Seago, A. eds. Music and Human-Computer Interaction. Springer, London. pp. 241--258. ISBN 9781447129905.
 
 \subsection*{Journal Articles}
 \noindent
-\years{2018c}\textbf{Xambó, A.}, Lerch, A. and Freeman, J. (2018). “Music Information Retrieval in Live Coding: A Theoretical Framework". \emph{Computer Music Journal}, 42(4), Winter 2018. (in press)\\
-\years{2018b}Roma, G. and \textbf{Xambó, A.} and Freeman, J. (2018). “User-independent Accelerometer Gesture Recognition for Participatory Mobile Music". \emph{Journal of Audio Engineering Society}, 66(6), pp. 430--438.\\
-\years{2018a}\textbf{Xambó, A.}, Roma, G., Shah, P., Tsuchiya, T., Freeman, J. and Magerko, B. (2018). “Turn-taking and Online Chatting in Co-located and Remote Collaborative Music Live Coding". \emph{Journal of Audio Engineering Society}, 66(4), pp. 253--256.\\
-\years{2017c}\textbf{Xambó, A.}, Hornecker, E., Marshall, P., Jordà, S., Dobbyn, C. and Laney, R. (2017). “Exploring Social Interaction with a Tangible Music Interface". \emph{Interacting with Computers}, 29(2), pp. 248--270.\\
+\years{2018c}\textbf{Xambó, A.}, Lerch, A., Freeman, J. (in press). “Music Information Retrieval in Live Coding: A Theoretical Framework". \emph{Computer Music Journal}, 42(4), Winter 2018.\\
+\years{2018b}Roma, G. and \textbf{Xambó, A.}, Freeman, J. (2018). “User-independent Accelerometer Gesture Recognition for Participatory Mobile Music". \emph{Journal of Audio Engineering Society}, 66(6), pp. 430--438.\\
+\years{2018a}\textbf{Xambó, A.}, Roma, G., Shah, P., Tsuchiya, T., Freeman, J., Magerko, B. (2018). “Turn-taking and Online Chatting in Co-located and Remote Collaborative Music Live Coding". \emph{Journal of Audio Engineering Society}, 66(4), pp. 253--256.\\
+\years{2017c}\textbf{Xambó, A.}, Hornecker, E., Marshall, P., Jordà, S., Dobbyn, C., Laney, R. (2017). “Exploring Social Interaction with a Tangible Music Interface". \emph{Interacting with Computers}, 29(2), pp. 248--270.\\
 \years{2017b}Jewitt, C., Price, S., \textbf{Xambó, A.} (2017). “Conceptualising and Researching the Body in Digital Contexts: Towards New Methodological Conversations Across the Arts and Social Sciences". \emph{Qualitative Research}, 17(1), pp. 37--53.\\
-\years{2017a}Jewitt, C., \textbf{Xambó, A.} and Price, S. (2017). “Exploring Methodological Innovation in the Social Sciences: The Body in Digital Environments and the Arts". \emph{International Journal of Social Research Methodology},  20(1), pp. 105--120.\\
-\years{2013b}\textbf{Xambó, A.}, Hornecker, E., Marshall, P., Jordà, S., Dobbyn, C. and Laney, R. (2013). “Let's Jam the Reactable: Peer Learning during Musical Improvisation with a Tabletop Tangible Interface". \emph{ACM Transactions on Computer-Human Interaction}, 20(6), pp. 36:1--36:34.\\
-\years{2013a}Bogdanov, D., Haro, M., Fuhrmann, F., \textbf{Xambó, A.}, Gómez, E. and Herrera, P. (2013). “Semantic Audio Content-based Music Recommendation and Visualization based on User Preference Examples". \emph{Information Processing \& Management}, 49(1), pp. 13--33.
+\years{2017a}Jewitt, C., \textbf{Xambó, A.}, Price, S. (2017). “Exploring Methodological Innovation in the Social Sciences: The Body in Digital Environments and the Arts". \emph{International Journal of Social Research Methodology},  20(1), pp. 105--120.\\
+\years{2013b}\textbf{Xambó, A.}, Hornecker, E., Marshall, P., Jordà, S., Dobbyn, C., Laney, R. (2013). “Let's Jam the Reactable: Peer Learning during Musical Improvisation with a Tabletop Tangible Interface". \emph{ACM Transactions on Computer-Human Interaction}, 20(6), pp. 36:1--36:34.\\
+\years{2013a}Bogdanov, D., Haro, M., Fuhrmann, F., \textbf{Xambó, A.}, Gómez, E., Herrera, P. (2013). “Semantic Audio Content-based Music Recommendation and Visualization based on User Preference Examples". \emph{Information Processing \& Management}, 49(1), pp. 13--33.
 
 \subsection*{Peer-Reviewed Conference Papers}
 \noindent
 
+\years{2019}\textbf{Xambó, A.}, Saue, S., Jensenius, A.R., Støckert, R., Brandtsegg, Ø. (in press). "NIME Prototyping in Teams: A Participatory Approach to Teaching Physical Computing". In Proceedings of the New Interfaces for Musical Expression (NIME ’19). Porto Alegre, Brazil.\\
 \years{2018f}Roma, G., \textbf{Xambó, A.}, Green, O., Tremblay, P.A. (2018) "A Javascript Library for Flexible Visualization of Audio Descriptors". In Proceedings of the Web Audio Conference (WAC '18). Berlin, Germany.\\
 \years{2018e}Pauwels, J., \textbf{Xambó, A.}, Roma, G., Barthet, M. Fazekas, G. (2018) "Exploring Real-time Visualisations to Support Chord Learning with a Large Music Collection". In Proceedings of the Web Audio Conference (WAC '18). Berlin, Germany.\\
 \years{2018d}\textbf{Xambó, A.}, Pauwels, J., Roma, G., Barthet, M. Fazekas, G. (2018) "Jam with Jamendo: Querying a Large Music Collection by Chords from a Learner’s Perspective". In Proceedings of Audio Mostly 2018: Sound in Immersion and Emotion (AM '18). Wrexham, United Kingdom. \\
@@ -381,7 +384,8 @@ Candidate’s Share: 50\% (\$1,650)
 \subsection*{Own Institution}
 \noindent
 
-\years{2019} \textsc{Oral Presenter} together with Jawad, K. and Lesteberg, M.. (January 31, 2019). “Women Nordic Music Technology". \emph{Girls Geek Dinner Trondheim}. Music Technology, NTNU, Trondheim, Norway.\\
+\years{2019b} \textsc{Oral Presenter}. (March 25, 2019). “Summary of my research and teaching 2018-2019". \emph{Faglig Forum}. Music Technology, NTNU, Trondheim, Norway.\\
+\years{2019a} \textsc{Oral Presenter} together with Jawad, K. and Lesteberg, M. (January 31, 2019). “Women Nordic Music Technology". \emph{Girls Geek Dinner Trondheim}. Music Technology, NTNU, Trondheim, Norway.\\
 \years{2018c} \textsc{Lightning Talk Speaker}. (September 28, 2018). “Challenges and Opportunities of Collaborative Music Live Coding: A Practitioner's Approach". \emph{The Raw and The Cooked, Inter/sections 2018}. Café 1001, London, UK.\\
 \years{2018b} \textsc{Oral Presenter}. (August 13, 2018). “Women in Music Tech: A Case Study". \emph{Oppstartseminar (Institutt for musikk)}. Dokkhuset, Trondheim, Norway.\\
 \years{2018a} \textsc{Oral Presenter}. (August 13, 2018). “A Journey Through My Research and Creative Practice". \emph{Oppstartseminar (Institutt for musikk)}. Dokkhuset, Trondheim, Norway.\\
@@ -435,7 +439,7 @@ Candidate’s Share: 50\% (\$1,650)
 \years{2018a} Allik, A., \textbf{Xambó, A.} (April 7--8, 2018). “Collaborative Network Music". \emph{Rewire 2018}, The Hague, The Netherlands. Organized by Music Hackspace. Funded by Rewire.\\
 \years{2017} \textbf{Xambó, A.} (October 14, 2017). “Huddersfield Girl Geeks: Audiovisual Creative Coding with P5.js". \emph{Kirklees Libraries}, Huddersfield, UK. Funded by Google.\\
 \years{2013} \textbf{Xambó, A.} (May 2, 2013). “Introduction to SuperCollider". \emph{Music Computing Meeting}, OU. Milton Keynes, UK.\\
-\years{2012} \textbf{Xambó, A.}; Roma, G. and Bovermann, T. (April 15, 2012). “Tangible Musical Interfaces with SuperCollider". \emph{SuperCollider Symposium 2012}, Goldsmiths, University of London. London.\\[1.2cm]%hack
+\years{2012} \textbf{Xambó, A.}; Roma, G. and Bovermann, T. (April 15, 2012). “Tangible Musical Interfaces with SuperCollider". \emph{SuperCollider Symposium 2012}, Goldsmiths, University of London. London.\\%[1.2cm]%hack
 
 \subsection*{Webinars}
 \noindent
@@ -686,7 +690,7 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.\
 \section*{Supervision}
 \noindent
 
-\years{11/2018--present}Appraisal Committee Member for Hilmar Thordarson, Norwegian Programme for Artistic Research, Norwegian Science and Technology University, Trondheim, Norway.\\
+\years{11/2018--present}Appraisal Committee Member for Hilmar Thordarson, Norwegian Programme for Artistic PhD Research, Norwegian Science and Technology University, Trondheim, Norway.\\
 \years{01/2018--08/2018}Co-advisor of Tayjo Padmini Vaduru (master student in Computer Science, Queen Mary University of London) of her master project proposal on automated generation of soundscapes using content from Audio Commons. Master thesis title: ``Moodscape Generator: Automated Generation of Soundscapes''.\\
 \years{05/2016--12/2017}Mentor and advisor the female graduate students of the student-led organization \emph{Women in Music Tech}, including the Chair of the organization, Léa Ikkache, the Editor-in-Chief of the newsletter Amruta Vidwans and female newcomers to the organization, such as Jyoti Narang.\\
 \years{09/2015--05/2016}Co-advisor of Marc Huet and Travis Gasque (master's students in Digital Media, School of Literature, Media, and Communication) and Anna Weisling (PhD student in Digital Media, School of LMC) for their graduate design project TuneTable. This work has been part of Brian Magerko’s Digital Media studio course at Georgia Tech. From this work we have published at TEI '17 (see Peer-Reviewed Conference Papers) and we have informed a successful and competitive NSF-funded grant (Advancing Informal STEM Learning Grant).\\
@@ -710,7 +714,7 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.\
 \noindent
 
 \years{09/2018--present}\href{http://wonomute.no}{Women Nordic Music Technology}, the website and blog of the WoNoMute organization. Co-Creator and Coordinator.\\ 
-\years{08/2018--present}\href{https://mct-master.github.io}{MCT master blog}, the blog of the MCT master. Co-Creator and Coordinator.\\ 
+\years{08/2018--present}\href{https://mct-master.github.io}{MCT master blog}, the blog of the MCT master. Co-Creator and Co-Coordinator.\\ 
 \years{05/2017--07/2018}\href{https://www.audiocommons.org}{Audio Commons}, the blog of the EU-funded project Audio Commons. Coordinator, Reviewer and Author.\\ 
 \years{10/2016--present}\href{http://annaxambo.me/blog}{Anna Xambó's Blog}, the blog of my personal website. Creator and Author.\\ 
 \years{05/2016--12/2017}\href{http://womeninmusictech.gatech.edu}{Women in Music Tech}, the newsletter of the Women in Music Tech organization. Co-Creator, Coordinator, Reviewer and Author.\\ 
@@ -760,21 +764,21 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.\
 \subsection*{Conference Reviewer}
 \noindent
 
-\years{2018i}\emph{ACM special interest group on Computer GRAPHics and Interactive Techniques (SIGGRAPH)} (2018).\\
-\years{2018h}\emph{International Conference of the Learning Sciences} (2018).\\
-\years{2018g}\emph{International Society for Music Information Retrieval Conference} (2018).\\
-\years{2017h}\emph{ACM Creativity and Cognition} (2017).\\
-\years{2017g}\emph{ACM Innovation and Technology in Computer Science Education} (2017).\\
-\years{2017f}\emph{Co-Creation Workshop at International Conference on Computational Creativity} (2017).\\
-\years{2017--2018}\emph{International Computer Music Conference -- ICMC Music} (2017e, 2018f).\\
-\years{2016g}\emph{International Conference on Live Interfaces} (2016).\\
-\years{2016f}\emph{ISSTA International Festival and Conference on Sound in the Arts, Science and Technology} (2016).\\
-\years{2016--2018}\emph{Web Audio Conference} (2016e, 2017d, 2018e).\\
-\years{2015--2017}\emph{ACM Special Interest Group on Computer-Human Interaction} (2015c, 2016d, 2017c, 2018d).\\
+\years{2018}\emph{ACM Special Interest Group on Computer GRAPHics and Interactive Techniques (SIGGRAPH)} (2018).\\
+\years{2018}\emph{International Conference of the Learning Sciences} (2018).\\
+\years{2018--2019}\emph{International Society for Music Information Retrieval Conference} (2018--2019).\\
+\years{2017--2019}\emph{ACM Creativity and Cognition} (2017, 2019).\\
+\years{2017}\emph{ACM Innovation and Technology in Computer Science Education} (2017).\\
+\years{2017}\emph{Co-Creation Workshop at International Conference on Computational Creativity} (2017).\\
+\years{2017--2018}\emph{International Computer Music Conference -- ICMC Music} (2017, 2018).\\
+\years{2016}\emph{International Conference on Live Interfaces} (2016).\\
+\years{2016}\emph{ISSTA International Festival and Conference on Sound in the Arts, Science and Technology} (2016).\\
+\years{2016--2019}\emph{Web Audio Conference} (2016--2019).\\
+\years{2015--2019}\emph{ACM Special Interest Group on Computer-Human Interaction} (2015--2019).\\
 \years{2013c}\emph{IEEE Interactive Tabletops and Surfaces} (2013).\\
-\years{2012--2018}\emph{ACM Designing Interactive Systems} (2012c, 2016c, 2018c).\\
-\years{2012--2018}\emph{ACM Tangible, Embedded and Embodied Interaction} (2012b, 2013b, 2014b, 2015b, 2016b, 2017b, 2018b).\\
-\years{2011--2018}\emph{New Interfaces for Musical Expression} (2011, 2012a, 2013a, 2014a, 2015a, 2016a, 2017a, 2018a).
+\years{2012--2018}\emph{ACM Designing Interactive Systems} (2012, 2016, 2018).\\
+\years{2012--2018}\emph{ACM Tangible, Embedded and Embodied Interaction} (2012--2018).\\
+\years{2011--2019}\emph{New Interfaces for Musical Expression} (2011--2019).
 
 \subsection*{Journal Reviewer}
 \noindent
@@ -846,7 +850,7 @@ Co-Founder of a freelance studio focused on user-centric software and AV communi
 \subsection*{Languages}
 \noindent
 
-Catalan (native or bilingual proficiency), Spanish (native or bilingual proficiency), English (full professional proficiency), German (basic level), Italian (basic level), French (basic level).
+Catalan (native or bilingual proficiency), Spanish (native or bilingual proficiency), English (full professional proficiency), Norwegian (basic level), German (basic level), Italian (basic level), French (basic level).
 
 \subsection*{Computer Skills}
 \noindent
