updates early June 2019

--- a/Xambo.CV.tex
+++ b/Xambo.CV.tex
@@ -107,7 +107,6 @@ Norwegian University of Science and Technology (NTNU)\\
 ---\emph{MCT Programme Council Leader}, Department of Music, NTNU.\\
 ---\emph{Chair of the Women Nordic Music Technology} (WoNoMute) organization, Department of Music, NTNU.\\
 ---\emph{General Co-Chair of the Web Audio Conference 2019}, Department of Music, NTNU.\\
----\emph{Paper Co-Chair of the New Interfaces for Musical Expression Conference 2019}, Institute of Informatics and the Institute of Arts at Federal University of Rio Grande do Sul, Porto Alegre, Brazil.\\
 ---\emph{Local Committee Member of the International Conference of Live Interfaces 2020}, Department of Music, NTNU.\\
 ---\emph{Visiting Lecturer}, Centre for Digital Music (C4DM), School of Electronic Engineering and Computer Science (EECS), Queen Mary University of London (QMUL).\\
 
@@ -296,7 +295,7 @@ Candidate’s Share: 50\% (\$1,650)
 
 \subsection*{Journal Articles}
 \noindent
-\years{2018c}\textbf{Xambó, A.}, Lerch, A., Freeman, J. (in press). “Music Information Retrieval in Live Coding: A Theoretical Framework". \emph{Computer Music Journal}, 42(4), Winter 2018.\\
+\years{2018c}\textbf{Xambó, A.}, Lerch, A., Freeman, J. “Music Information Retrieval in Live Coding: A Theoretical Framework". \emph{Computer Music Journal}, 42(4), Winter 2018, pp. 9--25.\\
 \years{2018b}Roma, G. and \textbf{Xambó, A.}, Freeman, J. (2018). “User-independent Accelerometer Gesture Recognition for Participatory Mobile Music". \emph{Journal of Audio Engineering Society}, 66(6), pp. 430--438.\\
 \years{2018a}\textbf{Xambó, A.}, Roma, G., Shah, P., Tsuchiya, T., Freeman, J., Magerko, B. (2018). “Turn-taking and Online Chatting in Co-located and Remote Collaborative Music Live Coding". \emph{Journal of Audio Engineering Society}, 66(4), pp. 253--256.\\
 \years{2017c}\textbf{Xambó, A.}, Hornecker, E., Marshall, P., Jordà, S., Dobbyn, C., Laney, R. (2017). “Exploring Social Interaction with a Tangible Music Interface". \emph{Interacting with Computers}, 29(2), pp. 248--270.\\
@@ -361,6 +360,7 @@ Candidate’s Share: 50\% (\$1,650)
 \subsection*{External}
 \noindent
 
+\years{2019} \textsc{Oral Presenter} (July 5, 2019). "NIME Prototyping in Teams: A Participatory Approach to Teaching Physical Computing". \emph{NIME '19}. Centro cultural, Universidade Federal do Rio Grande do Sol, Porto Alegre (UFRGS), Brazil.\\
 \years{2018e} \textsc{Oral Presenter} together with Pauwels, J.  (September 19, 2018). "Exploring Real-time Visualisations to Support Chord Learning with a Large Music Collection". \emph{WAC '18}. \emph{Technische Universität Berlin}, Berlin, Germany.\\
 \years{2018d} \textsc{Oral Presenter} together with Pauwels, J. (September 14, 2018). "Jam with Jamendo: Querying a Large Music Collection by Chords from a Learner’s Perspective". \emph{AM '18}. \emph{University of Wrexham}, Wrexham, UK.\\
 \years{2018c} \textsc{Oral Presenter}. (July 12, 2018). “Audio Commons: Challenges and Opportunities of Using Online Repositories in Music Production and Performance". \emph{Filmuniversität Babelsberg Konrad Wolf}. Potsdam, Germany.\\
@@ -384,6 +384,7 @@ Candidate’s Share: 50\% (\$1,650)
 \subsection*{Own Institution}
 \noindent
 
+\years{2019c} \textsc{Oral Presenter} together with Jensenius, A., Jawad, K. and Aandahl, E. (May 23, 2019). “International joint Master's programme in Music, Communication \& Technology". \emph{Instituttseminar for sosiologi og statsvitenskap}. NTNU Department of Sociology and Political Science, Rockheim, Trondheim, Norway.\\
 \years{2019b} \textsc{Oral Presenter}. (March 25, 2019). “Summary of my research and teaching 2018-2019". \emph{Faglig Forum}. Music Technology, NTNU, Trondheim, Norway.\\
 \years{2019a} \textsc{Oral Presenter} together with Jawad, K. and Lesteberg, M. (January 31, 2019). “Women Nordic Music Technology". \emph{Girls Geek Dinner Trondheim}. Music Technology, NTNU, Trondheim, Norway.\\
 \years{2018c} \textsc{Lightning Talk Speaker}. (September 28, 2018). “Challenges and Opportunities of Collaborative Music Live Coding: A Practitioner's Approach". \emph{The Raw and The Cooked, Inter/sections 2018}. Café 1001, London, UK.\\
@@ -434,7 +435,8 @@ Candidate’s Share: 50\% (\$1,650)
 \subsection*{Workshops}
 \noindent
 
-\years{2019} Allik, A., \textbf{Xambó, A.} (January 16, 2019). “Musical Networks of Live Coders". \emph{International Conference on Live Coding 2019}, Medialab Prado, Madrid, Spain. \\
+\years{2019b}Jensenius, A.R., McPherson, A., \textbf{Xambó, A.}, Overholt, D., Pellerin, G., Bukvic, I.I., Fiebrink, R., Schramm, R. (June 3, 2019). “Open Research Strategies and Tools in the NIME Community". \emph{NIME '19}. Centro cultural, UFRGS, Porto Alegre, Brazil.\\
+\years{2019a} Allik, A., \textbf{Xambó, A.} (January 16, 2019). “Musical Networks of Live Coders". \emph{International Conference on Live Coding 2019}, Medialab Prado, Madrid, Spain. \\
 \years{2018b} \textbf{Xambó, A.} (July 12--13, 2018). “Creative Audio Programming". \emph{Filmuniversität  Babelsberg Konrad Wolf}, Potsdam, Germany. Organized by MA Creative Technologies.\\
 \years{2018a} Allik, A., \textbf{Xambó, A.} (April 7--8, 2018). “Collaborative Network Music". \emph{Rewire 2018}, The Hague, The Netherlands. Organized by Music Hackspace. Funded by Rewire.\\
 \years{2017} \textbf{Xambó, A.} (October 14, 2017). “Huddersfield Girl Geeks: Audiovisual Creative Coding with P5.js". \emph{Kirklees Libraries}, Huddersfield, UK. Funded by Google.\\
@@ -750,7 +752,7 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.\
 
 \years{2019d}\textsc{Local Committee Member}. \emph{International Conference of Live Interfaces 2020}. Trondheim, Norway.\\ 
 \years{2019c}\textsc{General Co-Chair}. \emph{Web Audio Conference 2019}. Trondheim, Norway.\\ 
-\years{2019b}\textsc{Paper Co-Chair}. \emph{New Interfaces for Musical Expression 2019}. Porto Alegre, Brazil.\\ 
+\years{2019b}\textsc{Paper Co-Chair \& Session Chair}. \emph{New Interfaces for Musical Expression 2019}. Porto Alegre, Brazil.\\ 
 \years{2019a}\textsc{Programme Committee Member}. \emph{ACM Creativity \& Cognition 2019}. San Diego, USA.\\ 
 \years{2018}\textsc{Programme Committee Member}. \emph{ACM Spatial User Interaction 2018}. Berlin, Germany.\\ 
 \years{2017c}\textsc{Session Chair}. \emph{Web Audio Conference 2017}. London.\\
@@ -808,6 +810,7 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.\
 \subsection*{Jury Member}
 \noindent
 
+\years{2019}\emph{Pamela Z Award for Innovation (NIME '19)}, Universidade Federal do Rio Grande do Sol, Porto Alegre (UFRGS), Brazil.\\
 \years{2018}\emph{COLLAB2018}, Institute of Electronic Music and Acoustics (IEM), University of Music and Performing Arts. Graz, Austria.\\
 \years{2016}\emph{MOOG Hackathon 2016}, GTCMT, Georgia Tech. Atlanta, GA, USA.
 
@@ -837,6 +840,7 @@ Co-Founder of a freelance studio focused on user-centric software and AV communi
 
 \subsection*{Research Visits}
 
+\years{06/2019}Filmuniversität Babelsberg KONRAD WOLF, Potsdam, Germany.\\
 \years{07/2018}Filmuniversität Babelsberg KONRAD WOLF, Potsdam, Germany.\\
 \years{05/2012}University of Strathclyde, Glasgow, Scotland, UK.\\
 \years{06/2011}University of Strathclyde, Glasgow, Scotland, UK.\\
