updates early June 2019

--- a/Xambo.CV.tex
+++ b/Xambo.CV.tex
@@ -109,6 +109,7 @@ Norwegian University of Science and Technology (NTNU)\\
 ---\emph{General Co-Chair of the Web Audio Conference 2019}, Department of Music, NTNU.\\
 ---\emph{Local Committee Member of the International Conference of Live Interfaces 2020}, Department of Music, NTNU.\\
 ---\emph{Visiting Lecturer}, Centre for Digital Music (C4DM), School of Electronic Engineering and Computer Science (EECS), Queen Mary University of London (QMUL).\\
+---\emph{Women in NIME (WiNIME) officer}, International Conference of New Interfaces for Musical Expression.\\
 
 %%\hrule
 \section*{Areas of Interest}
@@ -153,8 +154,7 @@ Dissertation: \emph{Interfaces for Sketching Musical Compositions}.\\
 %\hrule
 \section*{Teaching Education}
 \noindent
-\years{2018--present}\textsc{Learning and Teaching in Higher Education (module II)}. Instructors: Alison Gilmour, Maren Thom. QMUL. London.\\
-\years{2018--present}\textsc{Learning and Teaching in Higher Education (module I)}. Instructor: Emma Kennedy. QMUL. London.\\
+\years{2018--2019}\textsc{Learning and Teaching in Higher Education} (with certificate). Instructors: Emma Kennedy (module 1), Alison Gilmour (module 2), Maren Thom (module 2). QMUL. London.\\
 \years{2018}\textsc{Women into Leadership}. Instructor: Lorraine Smith. QMUL. London.\\
 \years{2017}\textsc{Communication Skills for Teaching for International Faculty, Postdocs, and Visiting Scholars}. Instructor: Katherine Samford. Georgia Institute of Technology (Georgia Tech). Atlanta, GA, USA.
 
@@ -185,6 +185,7 @@ Dissertation: \emph{Interfaces for Sketching Musical Compositions}.\\
 \noindent
 
 \subsection*{Research Grants, Honors \& Awards}
+\years{2019} \textsc{Travel grant for EU-related research and promotion} (30,000 NOK).\\
 \years{2018--2021} \textsc{3-year Startup Grant (Startpakke)} (250,000 NOK), awarded to women in permanent academic positions in a scientific field with underrepresentation of women. NTNU, Trondheim, Norway.\\
 \years{2017} NCWIT Engagement Excellence Award (\$5,000 cash award) to Greg Hendler, Léa Ikkache, Brandon Westergaard, Anna Xambó, Doug Edwards, Brian Magerko, and Jason Freeman (Earsketch), Georgia Tech.\\
 \years{2016}\textsc{Women in Music Information Retrieval (WiMIR) grant}, awarded conference fee waiver to attend the ISMIR 2016 conference. New York University (NYU), New York.\\
@@ -307,7 +308,7 @@ Candidate’s Share: 50\% (\$1,650)
 \subsection*{Peer-Reviewed Conference Papers}
 \noindent
 
-\years{2019}\textbf{Xambó, A.}, Saue, S., Jensenius, A.R., Støckert, R., Brandtsegg, Ø. (in press). "NIME Prototyping in Teams: A Participatory Approach to Teaching Physical Computing". In Proceedings of the New Interfaces for Musical Expression (NIME ’19). Porto Alegre, Brazil.\\
+\years{2019}\textbf{Xambó, A.}, Saue, S., Jensenius, A.R., Støckert, R., Brandtsegg, Ø. "NIME Prototyping in Teams: A Participatory Approach to Teaching Physical Computing". In Proceedings of the New Interfaces for Musical Expression (NIME ’19). Porto Alegre, Brazil.\\
 \years{2018f}Roma, G., \textbf{Xambó, A.}, Green, O., Tremblay, P.A. (2018) "A Javascript Library for Flexible Visualization of Audio Descriptors". In Proceedings of the Web Audio Conference (WAC '18). Berlin, Germany.\\
 \years{2018e}Pauwels, J., \textbf{Xambó, A.}, Roma, G., Barthet, M. Fazekas, G. (2018) "Exploring Real-time Visualisations to Support Chord Learning with a Large Music Collection". In Proceedings of the Web Audio Conference (WAC '18). Berlin, Germany.\\
 \years{2018d}\textbf{Xambó, A.}, Pauwels, J., Roma, G., Barthet, M. Fazekas, G. (2018) "Jam with Jamendo: Querying a Large Music Collection by Chords from a Learner’s Perspective". In Proceedings of Audio Mostly 2018: Sound in Immersion and Emotion (AM '18). Wrexham, United Kingdom. \\
@@ -360,7 +361,8 @@ Candidate’s Share: 50\% (\$1,650)
 \subsection*{External}
 \noindent
 
-\years{2019} \textsc{Oral Presenter} (July 5, 2019). "NIME Prototyping in Teams: A Participatory Approach to Teaching Physical Computing". \emph{NIME '19}. Centro cultural, Universidade Federal do Rio Grande do Sol, Porto Alegre (UFRGS), Brazil.\\
+\years{2019b} \textsc{Oral Presenter} together with Jawad, K. and Shrestha, S. (June 20, 2019). “International joint Master's programme in Music, Communication \& Technology: A master for technological humanists". \emph{MA Creative Technologies}. \emph{Filmuniversität  Babelsberg Konrad Wolf}, Potsdam, Germany.\\
+\years{2019a} \textsc{Oral Presenter} (July 5, 2019). "NIME Prototyping in Teams: A Participatory Approach to Teaching Physical Computing". \emph{NIME '19}. Centro cultural, Universidade Federal do Rio Grande do Sol (UFRGS), Porto Alegre, Brazil.\\
 \years{2018e} \textsc{Oral Presenter} together with Pauwels, J.  (September 19, 2018). "Exploring Real-time Visualisations to Support Chord Learning with a Large Music Collection". \emph{WAC '18}. \emph{Technische Universität Berlin}, Berlin, Germany.\\
 \years{2018d} \textsc{Oral Presenter} together with Pauwels, J. (September 14, 2018). "Jam with Jamendo: Querying a Large Music Collection by Chords from a Learner’s Perspective". \emph{AM '18}. \emph{University of Wrexham}, Wrexham, UK.\\
 \years{2018c} \textsc{Oral Presenter}. (July 12, 2018). “Audio Commons: Challenges and Opportunities of Using Online Repositories in Music Production and Performance". \emph{Filmuniversität Babelsberg Konrad Wolf}. Potsdam, Germany.\\
@@ -435,6 +437,7 @@ Candidate’s Share: 50\% (\$1,650)
 \subsection*{Workshops}
 \noindent
 
+\years{2019c} \textbf{Xambó, A.} (June 20--21, 2019). “Creative Audio Programming for the Web". \emph{Filmuniversität  Babelsberg Konrad Wolf}, Potsdam, Germany. Organized by MA Creative Technologies (Modul 5 Audiovisual Application Design).\\
 \years{2019b}Jensenius, A.R., McPherson, A., \textbf{Xambó, A.}, Overholt, D., Pellerin, G., Bukvic, I.I., Fiebrink, R., Schramm, R. (June 3, 2019). “Open Research Strategies and Tools in the NIME Community". \emph{NIME '19}. Centro cultural, UFRGS, Porto Alegre, Brazil.\\
 \years{2019a} Allik, A., \textbf{Xambó, A.} (January 16, 2019). “Musical Networks of Live Coders". \emph{International Conference on Live Coding 2019}, Medialab Prado, Madrid, Spain. \\
 \years{2018b} \textbf{Xambó, A.} (July 12--13, 2018). “Creative Audio Programming". \emph{Filmuniversität  Babelsberg Konrad Wolf}, Potsdam, Germany. Organized by MA Creative Technologies.\\
@@ -477,7 +480,8 @@ Candidate’s Share: 50\% (\$1,650)
 \subsection*{Broadcasting}
 \noindent
 
-\years{2018b}Anna Xambó's “H2RI.01-04". (June 21, 2018). Rare Frequency on WZBC 90.3 FM Newton Boston College Radio.\\
+\years{2018c}Anna Xambó's “H2RI.01-04". (June 21, 2018). Rare Frequency on WZBC 90.3 FM Newton Boston College Radio.\\
+\years{2018b}Anna Xambó's “H2RI.011". (June 10, 2018). NILUCCIO ON NOISE. Podcast \#154 (May 2018).\\
 \years{2018a}Anna Xambó's “H2RI.07". (May 17, 2018). No Pigeonholes EXP on KOWS-FM.\\
 \years{2013f}peterMann's “og02". (July 28, 2013). BiP\_HOp Generation on Radio Grenouille.\\
 \years{2013e}peterMann's “og01", og05, og07 \& og09. (June 23, 2013). Framework radio \#426.\\
@@ -692,7 +696,7 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.\
 \section*{Supervision}
 \noindent
 
-\years{11/2018--present}Appraisal Committee Member for Hilmar Thordarson, Norwegian Programme for Artistic PhD Research, Norwegian Science and Technology University, Trondheim, Norway.\\
+\years{11/2018--present}Appraisal Committee Chair for Hilmar Thordarson, Norwegian Programme for Artistic PhD Research, Norwegian Science and Technology University, Trondheim, Norway.\\
 \years{01/2018--08/2018}Co-advisor of Tayjo Padmini Vaduru (master student in Computer Science, Queen Mary University of London) of her master project proposal on automated generation of soundscapes using content from Audio Commons. Master thesis title: ``Moodscape Generator: Automated Generation of Soundscapes''.\\
 \years{05/2016--12/2017}Mentor and advisor the female graduate students of the student-led organization \emph{Women in Music Tech}, including the Chair of the organization, Léa Ikkache, the Editor-in-Chief of the newsletter Amruta Vidwans and female newcomers to the organization, such as Jyoti Narang.\\
 \years{09/2015--05/2016}Co-advisor of Marc Huet and Travis Gasque (master's students in Digital Media, School of Literature, Media, and Communication) and Anna Weisling (PhD student in Digital Media, School of LMC) for their graduate design project TuneTable. This work has been part of Brian Magerko’s Digital Media studio course at Georgia Tech. From this work we have published at TEI '17 (see Peer-Reviewed Conference Papers) and we have informed a successful and competitive NSF-funded grant (Advancing Informal STEM Learning Grant).\\
@@ -747,9 +751,16 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.\
 \years{01/2019--present}\textsc{MCT Programme Study Leader} Department of Music, NTNU.\\
 \years{01/2019--present}\textsc{MCT Programme Council Leader}, Department of Music, NTNU.
 
+
+\subsection*{Fellow}
+\noindent
+
+\years{2019}\emph{Associate Fellow of the Higher Education Academy}, United Kingdom.\\
+
 \subsection*{Academic Chair / Committee Member / Conference Chair}
 \noindent
 
+\years{2019e--present}\textsc{WiNIME officer}. \emph{International Conference of New Interfaces for Musical Expression}.\\ 
 \years{2019d}\textsc{Local Committee Member}. \emph{International Conference of Live Interfaces 2020}. Trondheim, Norway.\\ 
 \years{2019c}\textsc{General Co-Chair}. \emph{Web Audio Conference 2019}. Trondheim, Norway.\\ 
 \years{2019b}\textsc{Paper Co-Chair \& Session Chair}. \emph{New Interfaces for Musical Expression 2019}. Porto Alegre, Brazil.\\ 
@@ -854,7 +865,7 @@ Co-Founder of a freelance studio focused on user-centric software and AV communi
 \subsection*{Languages}
 \noindent
 
-Catalan (native or bilingual proficiency), Spanish (native or bilingual proficiency), English (full professional proficiency), Norwegian (basic level), German (basic level), Italian (basic level), French (basic level).
+Catalan (native or bilingual proficiency), Spanish (native or bilingual proficiency), English (full professional proficiency--TOEFL iBT: 97/120 in 2009, PhD in the UK), Norwegian (basic level--Level 1 completed in 2019), German (basic level--Level 2 completed in 1991), Italian (basic level--Level 1 completed in 1991), French (basic level--self-taught).
 
 \subsection*{Computer Skills}
 \noindent
