--- a/Xambo.brief.CV.tex
+++ b/Xambo.brief.CV.tex
@@ -107,9 +107,9 @@ Associate Professor, NTNU, 2018--present. I am teaching graduate courses in audi
 I have been a postdoc at Queen Mary University of London (2017--2018) and postdoc at Georgia Tech (2015--2017). Also, I have been co-founder and co-chair of the organization Women in Music Tech at Georgia Tech (2016--2017). From 2013 to 2014, I was a research fellow at the London Knowledge Lab, UCL Institute of Education.
 I have been working since 2000 as interaction designer, web designer and web developer with strong background on Internet technologies. I have been employee in companies for 10 years (2000--2010) as well as co-founder of my own interactive media studio (2004--2010).\\
 
-{\textbf{Grants/Awards}} from NTNU (2018--2021); Sonic Arts Research Center (2018); NCWIT (2017); National Science Foundation AISL (2016); Women in Music Information Retrieval (2016); The Open University (2010--2013, 2010); Fundació Caixa de Sabadell (2003--2004); and Generalitat de Catalunya (2001--2002, 1998--1999).\\
+{\textbf{Grants/Awards}} from NTNU (2018--2021, 2019); Sonic Arts Research Center (2018); NCWIT (2017); National Science Foundation AISL (2016); Women in Music Information Retrieval (2016); The Open University (2010--2013, 2010); Fundació Caixa de Sabadell (2003--2004); and Generalitat de Catalunya (2001--2002, 1998--1999).\\
 
-{\textbf{Peer-Reviewed Journal Publications}} in Computer Music Journal (2018); Journal of Audio Engineering Society (2018); Interacting with Computers (2017); International Journal of Social Research Methodology, (2017); Qualitative Research (2017); ACM Transactions on Computer-Human Interaction (2013); and Information Processing \& Management (2013).\\
+{\textbf{Peer-Reviewed Journal Publications}} in Computer Music Journal (2019); Journal of Audio Engineering Society (2018); Interacting with Computers (2017); International Journal of Social Research Methodology, (2017); Qualitative Research (2017); ACM Transactions on Computer-Human Interaction (2013); and Information Processing \& Management (2013).\\
 
 {\textbf{Conference and Festival Participation}} at Web Audio Conference (2018, 2017); Audio Mostly (2018, 2017, 2010); New Interfaces for Musical Expression (2019, 2018, 2014, 2011, 2008); Tangible, Embedded, and Embodied Interaction Conference (2018, 2017, 2011); International Conference on Computational Creativity (2017); International Conference on Live Coding (2019); International Society for Music Information Retrieval Conference (2016); Sound and Music Computing Conference (2016, 2012, 2010); International Conference of Live Interfaces (2016); Research in Equity and Sustained Participation in Engineering, Computing, and Technology (2015); CHI (2014); International Workshop on Content-Based Multimedia Indexing (2013); British Computer Society Human-Computer Interaction (2012, 2011); and International Computer Music Conference (2011).\\
 
